# InfoCell

./: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  InfoCellsIndexType.drawio  ReadMe.md  animated_dashed_line.html  conanfile.txt
doc/: ReadMe.md  blog.md  compile.md  ideas.md
doc/diagrams/: Edges.drawio  InfoCellsIndexType.drawio  ListAsARoundabout.drawio
main/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/app/: App.cc  App.h  ArcDb.cc  ArcDb.h  CMakeLists.txt  Picture.cc  Picture.h  Solver.cc  Solver.h
src/arc-agi-2025/: App.cc  App.h  CMakeLists.txt  Colors.cc  Colors.h  Solver.cc  Solver.h  Task.h  main.cc
src/cells/: Arc.cc  Arc.h  Brain.cc  Brain.h  CMakeLists.txt  CellTest.cc  CellTestBase.cc  CellTestBase.h  Cells.cc  Cells.h  EdgeTest.cc  Log.h  NewCellTest.cc  NewCells.cc  NewCells.h  SVGPrinter.cc  SVGPrinter.h  SVGStructPrinter.cc  SVGStructPrinter.h  StructPrinter.cc  StructPrinter.h  ValuePrinter.cc  ValuePrinter.h
src/config/: CMakeLists.txt  Config.in.h
src/fsvgui/dom/: CMakeLists.txt  border.cpp  clear_under.cpp  color.cpp  color.h  elements.h  flexbox_helper.cpp  node.h  rect.cpp  rect.h  take_any_args.h  text.cpp  text.h
src/main/: CMakeLists.txt  main.cc
src/parser/: CMakeLists.txt  DotWriter.cc  DotWriter.h  Grammar.cc  Grammar.h  Parser.cc  Parser.h  Rule.cc  Rule.h  RuleState.cc  RuleState.h  Value.cc  Value.h
src/tests/: UnitTester.cc
src/util/: ArcTask.cc  ArcTask.h  CMakeLists.txt  Converter.cc  Converter.h  Logging.cc  Logging.h
