cmake_minimum_required(VERSION 3.27)

project(synth)

message("CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")

if(WIN32)
set(SYNTH_TTF_FONT_PATH "C:/Windows/Fonts/")
set(SYNTH_ARC_TRAINING_PATH "E:/Devel/ARC/ARC/data/training/")
set(SYNTH_CONAN_PATH_BASE "E:/Devel/ARC/conan")
elseif(UNIX)
set(SYNTH_TTF_FONT_PATH "/home/npeter/devel/")
set(SYNTH_ARC_TRAINING_PATH "/home/npeter/devel/ARC/data/training/")
set(SYNTH_CONAN_PATH_BASE "/home/npeter/devel/conan")
else()
message(FATAL_ERROR "Unsupported platform")
endif()

if (CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
list(APPEND CMAKE_MODULE_PATH ${SYNTH_CONAN_PATH_BASE}/Release)
list(APPEND CMAKE_PREFIX_PATH ${SYNTH_CONAN_PATH_BASE}/Release)
message("CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}")
message("CMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}")
elseif (CMAKE_BUILD_TYPE STREQUAL "Release")
list(APPEND CMAKE_MODULE_PATH ${SYNTH_CONAN_PATH_BASE}/Release)
list(APPEND CMAKE_PREFIX_PATH ${SYNTH_CONAN_PATH_BASE}/Release)
message("CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}")
message("CMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}")
else()
list(APPEND CMAKE_MODULE_PATH ${SYNTH_CONAN_PATH_BASE}/Debug)
list(APPEND CMAKE_PREFIX_PATH ${SYNTH_CONAN_PATH_BASE}/Debug)
endif()

set (CMAKE_CXX_STANDARD 20)

find_package(nlohmann_json)
find_package(utf8cpp REQUIRED)
find_package(ftxui REQUIRED)
find_package(Boost REQUIRED)
find_package(Freetype REQUIRED)
find_package(GTest REQUIRED)
find_package(fmt REQUIRED)
enable_testing()
add_subdirectory(src)