add_library(cellslib STATIC
    Cells.cc
    Cells.h
    Brain.cc
    Brain.h
)
if(MSVC)
    target_compile_options(cellslib PUBLIC "/Zc:__cplusplus")
endif()
target_include_directories(cellslib
    PUBLIC
        ${PROJECT_SOURCE_DIR}/include
        ${PROJECT_SOURCE_DIR}/src
)
target_link_libraries(cellslib
    PUBLIC
        utf8cpp
        boost::boost
        Freetype::Freetype
        gtest::gtest
        fmt::fmt
)

add_executable(celltest
    CellTest.cc
    StructPrinter.cc
    StructPrinter.h
    SVGPrinter.cc
    SVGPrinter.h
    SVGStructPrinter.cc
    SVGStructPrinter.h
    ValuePrinter.cc
    ValuePrinter.h
)
target_link_libraries(celltest
PRIVATE
    config
    cellslib
    applib
    fsvguilib
)