add_library(parserlib STATIC
DotWriter.cc
DotWriter.h
Grammar.cc
Grammar.h
HtmlHelper.cc
HtmlHelper.h
MathGrammar.h
Parser.cc
Parser.h
Rule.cc
Rule.h
RuleState.cc
RuleState.h
TestGrammar.h
Value.cc
Value.h
)
target_include_directories(parserlib
	PUBLIC
		${PROJECT_SOURCE_DIR}/include
		${PROJECT_SOURCE_DIR}/src
)
target_link_libraries(parserlib
	PUBLIC
		CONAN_PKG::boost
)